finalmente as mensagens estão carregando só a partir de certo ponto, sem repetir todas as mensagens todas as vezes. Provavelmente não foi feito da melhor forma, mas foi feito de uma forma que funciona sem armazenar informação excessiva

--- a/style.css
+++ b/style.css
@@ -32,7 +32,9 @@
 .conteudo{
 width:100%;
 padding:106px 0;
-height: 500px;
+
+/* height: 500px; */
+box-sizing: border-box;
 background-color:#E5E5E5 ;
 }
 
@@ -52,7 +54,9 @@ background-color:#E5E5E5 ;
 
     background-color: red;
 }
-
+.hidden{
+    display: none;
+}
 .mensagem-geral span{
     margin-left: 8px;
 }
