As mensagens estão carregando corretamente. O scroll se mantém na última mensagem, na parte inferior da tela. Erros de inatividade básicos estão funcionando. Erro de envio de mensagem quando a pessoa está inativa está funcionando. Layout ainda está todo errado

--- a/style.css
+++ b/style.css
@@ -60,7 +60,10 @@ background-color:#E5E5E5 ;
 .mensagem-geral span{
     margin-left: 8px;
 }
-
+input[type=submit]{
+   border:none;
+   background: transparent;
+}
 body{
 background-color: black;
 }
