--- a/style.css
+++ b/style.css
@@ -74,9 +74,17 @@ input[type=submit]{
    border:none;
    background: transparent;
 }
-
+input[type=text]{
+    border:none;
+    background: transparent;
+    height: 70px;
+    width: 90%;
+    overflow-wrap: break-word;
+    word-break: break-all;
+    padding-right: 10px;
+ }
 .tempo{
-    width:16%;
+    width:18%;
     color: #AAAAAA;
 }
 .from{
@@ -94,6 +102,7 @@ input[type=submit]{
 
 .mensagem{
  word-wrap: break-word;
+ 
  /* background-color: brown; */
 }
 
